# phdisentangling

./: .gitignore  CITATION.cff  README.md  launch_dl_testing.sh  launch_dl_training.sh  launch_saliency_maps.sh
make_dataset/: README.md  make_dataset_utils.py  make_skeleton_summary.py  pyproject.toml  tools.py
make_dataset/abide1/: launch_deep_folding_scripts.sh  skeleton_make_dataset.py
make_dataset/abide2/: skeleton_make_dataset.py
make_dataset/biobd/: biobd_skeleton_make_dataset.py  check_voxel_size.py  morphologist_make_dataset.py  quasi-raw_make_dataset.py  quasiraw_make_dataset.py  skeleton_make_dataset.py
make_dataset/bsnip1/: cat12vbm_make_dataset.py  quasi-raw_make_dataset.py  skeleton_make_dataset.py
make_dataset/candi/: check_voxel_size.py  skeleton_make_dataset.py
make_dataset/cnp/: check_voxel_size.py  cnp_foldlabel_make_dataset.py  launch_deep_folding_scripts.sh  skeleton_make_dataset.py
make_dataset/cohorts/abide1/: skeleton_make_dataset.py
make_dataset/cohorts/abide2/: delete_skeletons_of_sbj_without_labelled_graphs.py  launch_deep_folding_scripts.sh  skeleton_make_dataset.py
make_dataset/cohorts/ausz/: cat12vbm_make_dataset.py  freesurfer_make_dataset.py  skeleton_make_dataset.py
make_dataset/hcp/: hcp_skeleton_make_dataset.py
make_dataset/makedataset/: image.py  logs.py  metadata.py  nii2npy.py  output.py  setup.py  summary.py  utils.py
make_dataset/schizconnect-vip-prague/: check_voxel_size.py  launch_deep_folding_scripts.sh  make_cv.py  morphologist_make_dataset.py  quasi-raw_make_dataset.py  skeleton_make_dataset.py
(+147 files in other folders)
