[project]
name = "makedataset"
version = "0.0"
description = "Make MRI datasets for clinical studies"
requires-python = ">=3.10"
dependencies = [
    'numpy>=1.21',
    'pandas>=1.3',
    'nibabel>=3.2',
    'tqdm>=4.57'
]

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

#[tool.setuptools.packages.find]
#where = ["src"]